Making CSS more responsive

--- a/assets/css/public/lbcc.css
+++ b/assets/css/public/lbcc.css
@@ -1885,10 +1885,6 @@ img.pluslet_card_image {
     font-weight: 600;
 }
 
-#header-inner-wrap .pure-g .pure-u-1 {
-    margin-top: 40px;
-}
-
 a.header-link {
     font-weight: 600;
     color: #005B94;
@@ -1900,6 +1896,15 @@ a.header-link {
     background: #FDB913;
 }
 
-#header_inner_wrap .pure-g form, a.header-link {
-    margin-top: 42px;
+@media screen and (max-width: 80em) {
+    a.header-link {
+        display: none;
+    }
 }
+
+@media screen and (min-width: 80em) {
+    #header_inner_wrap .pure-g form, a.header-link {
+        margin-top: 42px;
+    }
+}
+
