--- a/assets/css/public/lbcc.css
+++ b/assets/css/public/lbcc.css
@@ -275,14 +275,12 @@ img.main_logo {
     position: relative;
     clear: both;
     background: #fff; 
-    border: 0px solid #ccc;
+    border: 1px solid #000;
     padding: 0;
     font-size: 10pt;   
     border-radius: 5px;
     margin: 1em 1em;    
-    box-shadow: 5px 5px 7px #e0e0e0;
     border-radius: 6px;
-    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.22);
 }
 
 .pluslet ul {
@@ -369,6 +367,10 @@ img.main_logo {
 }
 
 #tab-container {margin: -40px 0 0 0; padding: 0;}
+
+#tab-body {
+    background: #E1E0DC;
+}
 
 /* if no tabs are being rendered, let's adjust our margins (example: one page guide - no tabs!!) */
 #tab-body.no-tabs { 
@@ -1833,7 +1835,8 @@ h1 {
     clip-path: polygon(0 0, 100% 0%, 98% 100%, 0% 100%) border-box;
     background-color: #FDB913;
     color: #000;
-    margin-left: 4px;
+    font-size: 2em;
+    font-weight: 700;
     padding: 0.5em 10px 1em 20px;
     margin: .5em 0 1em 0;
 
@@ -1846,7 +1849,7 @@ h1 {
     margin: -50px 0 0 70%;
 }
 
-#footer a.pure-button {
+#footer a.pure-button, .ui-tabs .ui-tabs-nav li {
     background-color: #873D5A;
     color: #FFF;
     position: relative;
