A few style tweaks

--- a/assets/css/public/lbcc.css
+++ b/assets/css/public/lbcc.css
@@ -1928,3 +1928,7 @@ a#skiptocontent:focus {
     -webkit-transition: top .1s ease-in;
     transition: top .1s ease-in;
 }
+
+a.ui-tabs-anchor {
+    color: #fff;
+}
