All titlebars should have a similar color scheme

--- a/assets/css/public/lbcc.css
+++ b/assets/css/public/lbcc.css
@@ -1178,7 +1178,7 @@ width:55px;
     color:white;
 }
 
-.ts-whiteblack, .ts-umcream
+.ts-whiteblack
 {
     background-color:white;
     color:black;
