--- a/assets/css/theme/nasa.css
+++ b/assets/css/theme/nasa.css
@@ -6,7 +6,8 @@
 */
 
 body {
-    background: #e3e1d9 url(../../images/admin/mission_control_lg.jpg) no-repeat center center fixed;
+    background: #e3e1d9 url(../../images/admin/mission_control_lg.jpg);
+    background-size: cover;
 }
 
 .background {display: block;}
