--- a/assets/css/public/lbcc.css
+++ b/assets/css/public/lbcc.css
@@ -1829,7 +1829,7 @@ h1 {
     color: #000;
     font-size: 2em;
     font-weight: 700;
-    padding: 0.5em 10px 1em 20px;
+    padding: 20px 10px 20px;
     margin-top: 5px;
     font-family: 'Merriweather', serif;
 }
