Updating index to match college styles

--- a/assets/css/public/lbcc.css
+++ b/assets/css/public/lbcc.css
@@ -74,10 +74,9 @@ a:hover {
 
 h2 {
   
-    font-size: 1.2em;
-    letter-spacing: 1px;
-    color: #333;
-    font-size: 1.3em;
+    font-weight: 300;
+    font-size: 38px;
+    line-height: 45px;
 }
 
 h3 {
@@ -1400,9 +1399,14 @@ h4.guide-select-heading {margin: 6px 0; font-weight: bold;}
 
 
 /*Guide List Pluslet */
-.guide_list {background-color: #FFF; padding:5px 5px;margin-bottom: 10px; border-radius: 2px;  }
+.guide_list {
+    background-color: #FFF;
+    padding:5px 5px 60px 5px;
+    margin: 50px 0 10px 0;
+    border-bottom: #E1E0DC solid 2px;
+}
 
-.guide_list_header {border-bottom: 1px dotted #ccc; font-size: 1.1em !important; font-weight: bold;}
+.guide_list_header {font-size: 1.1em !important; font-weight: bold;}
 .guide_list_header h3 {letter-spacing: 0; color:#333; font-size: 1em; padding-bottom:2px; }
 
 ul.guide-listing {list-style: inside none none !important; margin: 5px 0 0 5px !important; padding: 0 !important;}
@@ -1958,3 +1962,32 @@ ul.link-list-display li a, ul.link-list-display li a:visited, ul.link-list-displ
     font-size: 1.5em;
     color: #005B94;
 }
+
+/* Add flags to circle pictures */
+
+.expert-img {
+    position: relative;
+    width: 165px;
+    margin-left: 3px;
+}
+
+.expert-img::after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 20px;
+    left: 13px;
+    width: 50px;
+    height: 30px;
+    transform: skew(10deg);
+    z-index: -1;
+    background-color: #FDB913;
+}
+
+.expert-img img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
+
