--- a/assets/css/public/lbcc.css
+++ b/assets/css/public/lbcc.css
@@ -657,7 +657,7 @@ overflow: auto;
 */
 
 .evenrow, .even {
-    background-color: #f2f2f2;
+    background-color: #E1E0DC;
 }
 .oddrow, .odd {
     background-color: #fff;
@@ -1147,10 +1147,6 @@ div.video_thumb img {
 .dropspotty.ui-state-active {background-color: rgba(51, 51, 51, 0.7) !important; color: #FFF !important;}
 .dropspotty.ui-state-active a {color: #FFF !important;}
 
-/* Next lines override the regular pluslet to create a heading */
-.evenrow {
-    background-color: #f2f2f2;
-}
 
 .bullet {
 height:55px;
@@ -1215,7 +1211,7 @@ width:55px;
 
 .staff-image {width: 90px; float:left; display: inline-block; margin-right: 10px; }
 
-.staff-photo {width: 70px; height: 70px; border: 1px solid #d5d5d5; padding: 3px; background-color: #f2f2f2;}
+.staff-photo {width: 70px; height: 70px; border: 1px solid #d5d5d5; padding: 3px; background-color: #E1E0DC;}
 
 .staff-content {
   float:left; 
@@ -1565,9 +1561,6 @@ ul.guide-listing li .fa {color: #666; font-size:0.9em; cursor: pointer; margin-r
 .index-search-area {margin-right: 0; padding: 0;}
 .index-search-area .autoC {margin-bottom:25px;}
 .index-search-area .ui-autocomplete-input {
-    /*background: #f2f2f2 none repeat scroll 0 0;
-    border-color: #DADFE1 #F2F1EF #F2F1EF #DADFE1 !important;
-    box-shadow:none !important;*/
     border-radius:4px 4px 4px 4px !important;
     border-style: solid;
     border-width: 1px;
