Fixing styles on collections page, closes #45

--- a/assets/css/public/lbcc.css
+++ b/assets/css/public/lbcc.css
@@ -1287,7 +1287,7 @@ h4.guide-select-heading {margin: 6px 0; font-weight: bold;}
 }
 
 .expert-list-circ .expert-img {display: block; text-align: center;}
-.expert-list-circ .expert-img img.staff_photo_full {padding:0; background-color: transparent; width: 80px; height: 80px; border: none; border-radius: 50%;}
+.expert-img img.staff_photo_full {padding:0; background-color: transparent; width: 80px; height: 80px; border: none; border-radius: 50%;}
 .expert-list-circ .expert-label {display: block; text-align: center; padding:3px 0; width:100%; font-size:0.9em; line-height: 1.1em;}
 .expert-list-circ .expert-title {display: block; font-size:0.95em; line-height: 1.2em; padding:5px; color:#FFF;}
 .expert-list-circ .expert-subjects {display: block; text-align: left; padding:5px; font-size: 0.85em; line-height: 1.2em; color: #FFF;}
@@ -1921,4 +1921,14 @@ button.print-img-tabs, button.print-img-no-tabs {
 .ui-tabs-nav.ui-widget-header {
     background-color: transparent !important;
     background-image: none !important;
+}
+
+.separate-children > div {
+    border-bottom: 2px solid #E1E0DC;
+    padding-bottom: 10px;
+    margin-bottom: 10px;    
+}
+
+.collection-photo {
+    margin-left: 30px;
 }
