--- a/assets/css/public/lbcc.css
+++ b/assets/css/public/lbcc.css
@@ -348,7 +348,8 @@ img.main_logo {
 #tab-container {
     background: #005b94;
     color: #fff;
-    height: 100%
+    height: 100%;
+    padding: 25px 0 25px 10px;
 }
 
 
@@ -1905,7 +1906,7 @@ button.print-img-tabs, button.print-img-no-tabs {
 }
 
 #tab-container > form, .tab-container > div {
-    margin: 5px 2px 2px 10px;
+    margin: 5px 2px 18px 10px;
 }
 
 #tab-container > ul {
@@ -1916,6 +1917,10 @@ button.print-img-tabs, button.print-img-no-tabs {
 #tab-container ul a {
     color: #fff;
     text-decoration: none;
+}
+
+#tab-container ul li {
+    padding-bottom: 20px;
 }
 
 .ui-tabs-nav.ui-widget-header {
