--- a/assets/css/admin/admin_styles.css
+++ b/assets/css/admin/admin_styles.css
@@ -2288,6 +2288,40 @@ ul.guide-listing li .fa {color: #ABB7B7; font-size:0.9em; cursor: pointer; margi
   justify-content: space-around;
 }
 
+.booklist-draggables-container {
+  list-style: inside none none; 
+  /* background-color: #ececec; */
+  padding: 0px;
+  padding-left: 0px;
+  margin: 5px 0 0 0; 
+  overflow: auto;
+  max-height: 350px; 
+  width: 100% !important;
+  border-right: 1px solid #EEEEEE; 
+  border-bottom: 1px solid #EEEEEE; 
+  border-left: 1px solid #DADFE1; 
+  border-top: 1px solid #DADFE1;
+}
+
+.booklist-draggable ul {
+  padding: 0px;
+}
+
+.booklist-item-draggable {
+  /* width: 98%;  */
+  white-space: nowrap; 
+  overflow: hidden; 
+  text-overflow: ellipsis; 
+  cursor: move; 
+  color:#333;  
+  line-height: 1.3em; 
+  border-bottom: 1px dotted #CCC; 
+  font-size: 12px; 
+  font-family: 'NotoSansRegular'; 
+  font-weight: normal; 
+  padding: 4px 0 6px 8px;
+}
+
 /* Remove boxes from current tab */
 .remove_boxes_content {margin-bottom: 15px;}
 
