WIP think I've got everything figured out

--- a/assets/css/admin/admin_styles.css
+++ b/assets/css/admin/admin_styles.css
@@ -2367,7 +2367,7 @@ ul.guide-listing li .fa {color: #ABB7B7; font-size:0.9em; cursor: pointer; margi
 }
 
 .booklist-hidden-textarea {
-  /* display: none; */
+  display: none;
   max-width: 100%;
 }
 
