--- a/assets/css/public/lbcc.css
+++ b/assets/css/public/lbcc.css
@@ -1872,10 +1872,16 @@ ul.link-list-display li>a, ul.link-list-display li>a:visited, ul.link-list-displ
      -> if there already is a link arrow
      -> if the link has focus
      -> contact links
+     -> book covers
+     -> in database list letters listing
+     -> link has class no-decoration
 */
 ul.link-list-display li a[href]:before,
 a:focus:before,
-a.contact-pluslet-link:before {
+a.contact-pluslet-link:before,
+.booklist_isbn_cover a:before,
+#letterhead a:before,
+a.no-decoration:before {
     content: "" !important;
     margin-right: 0 !important;
 }
