Don't underline link arrows, closes #73

--- a/assets/css/public/lbcc.css
+++ b/assets/css/public/lbcc.css
@@ -1884,6 +1884,7 @@ a.contact-pluslet-link:before,
 a.no-decoration:before {
     content: "" !important;
     margin-right: 0 !important;
+    display: inline-block;
 }
 
 /* Add flags to circle pictures */
