2 more places not to show the link arrow, closes #71

--- a/assets/css/public/lbcc.css
+++ b/assets/css/public/lbcc.css
@@ -1870,12 +1870,13 @@ ul.link-list-display li>a, ul.link-list-display li>a:visited, ul.link-list-displ
 }
 
 /* Don't show the link arrow in a number of situations:
-     -> if there already is a link arrow
+     -> if there already is a link arrow (including being part of an .arrow-list)
      -> if the link has focus
      -> contact links
      -> book covers
      -> in database list letters listing
      -> link has class no-decoration
+     -> link is in the table of contents or booklist
 */
 ul.link-list-display li a[href]:before,
 .arrow-list li a:before,
@@ -1883,6 +1884,8 @@ a:focus:before,
 a.contact-pluslet-link:before,
 .booklist_isbn_cover a:before,
 #letterhead a:before,
+a.table-of-contents::before,
+.booklist_isbn_data a::before
 a.no-decoration:before {
     content: "" !important;
     margin-right: 0 !important;
